[gd_scene load_steps=17 format=3 uid="uid://c72xudycrtjd3"]

[ext_resource type="Script" uid="uid://bxx4a8sv6552g" path="res://scenes/puzzles/FresnelLense.gd" id="1_1q46n"]
[ext_resource type="Texture2D" uid="uid://devrggaeffqu7" path="res://resources/dummy/dummyArrow.png" id="2_6ml0m"]
[ext_resource type="Shader" uid="uid://bnjii8bbdfi2m" path="res://resources/shaders/color_tint.gdshader" id="2_6rvpc"]
[ext_resource type="Texture2D" uid="uid://c20lwyftmn2lp" path="res://resources/dummy/dummyLantern.png" id="3_iemkg"]
[ext_resource type="Texture2D" uid="uid://2nbb2t4toyjx" path="res://resources/dummy/dummyButton.png" id="4_mfucn"]
[ext_resource type="Texture2D" uid="uid://cacvr4fevkqs1" path="res://resources/dummy/dummySwitch.png" id="5_qoa56"]
[ext_resource type="Texture2D" uid="uid://dyhvhgpgbset7" path="res://resources/dummy/dummyStartLight.png" id="7_qoa56"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mfucn"]
shader = ExtResource("2_6rvpc")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/tint_factor = 0.5
shader_parameter/fade = 1.0

[sub_resource type="GDScript" id="GDScript_wvhdc"]
resource_name = "ShortButton"
script/source = "extends TextureButton

func _on_button_down() -> void:
	flip_h = !flip_h
	$\"../TrackLengthMed\".flip_h = true
	$\"../TrackLengthLong\".flip_h = true
	$\"../../..\".SetTrackLength(1)
"

[sub_resource type="GDScript" id="GDScript_mrysr"]
resource_name = "MedButton"
script/source = "extends TextureButton

func _on_button_down() -> void:
	flip_h = !flip_h
	$\"../TrackLengthShort\".flip_h = true
	$\"../TrackLengthLong\".flip_h = true
	$\"../../..\".SetTrackLength(2)
"

[sub_resource type="GDScript" id="GDScript_u0u4a"]
resource_name = "LongButton"
script/source = "extends TextureButton

func _on_button_down() -> void:
	flip_h = !flip_h
	$\"../TrackLengthShort\".flip_h = true
	$\"../TrackLengthMed\".flip_h = true
	$\"../../..\".SetTrackLength(3)
"

[sub_resource type="GDScript" id="GDScript_8fpho"]
resource_name = "BlackButton"
script/source = "extends TextureButton

func _on_button_down() -> void:
	$\"../../..\".SetColor(FresnelLensPuzzle.LensColor.BLACK)
"

[sub_resource type="GDScript" id="GDScript_mfucn"]
resource_name = "WhiteButton"
script/source = "extends TextureButton

func _on_button_down() -> void:
	$\"../../..\".SetColor(FresnelLensPuzzle.LensColor.WHITE)
"

[sub_resource type="GDScript" id="GDScript_rwxch"]
resource_name = "RedButton"
script/source = "extends TextureButton

func _on_button_down() -> void:
	$\"../../..\".SetColor(FresnelLensPuzzle.LensColor.RED)
"

[sub_resource type="GDScript" id="GDScript_6ml0m"]
resource_name = "YellowButton"
script/source = "extends TextureButton

func _on_button_down() -> void:
	$\"../../..\".SetColor(FresnelLensPuzzle.LensColor.YELLOW)
"

[sub_resource type="GDScript" id="GDScript_qoa56"]
resource_name = "GreenButton"
script/source = "extends TextureButton

func _on_button_down() -> void:
	$\"../../..\".SetColor(FresnelLensPuzzle.LensColor.GREEN)
"

[node name="FresnelLens" type="Node2D"]
script = ExtResource("1_1q46n")

[node name="PuzzleFullscreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 648.0

[node name="LensArea" type="HBoxContainer" parent="PuzzleFullscreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -251.0
offset_right = 448.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PrevButton" type="TextureButton" parent="PuzzleFullscreen/LensArea"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("2_6ml0m")
flip_h = true

[node name="LensTexture" type="TextureRect" parent="PuzzleFullscreen/LensArea"]
material = SubResource("ShaderMaterial_mfucn")
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_iemkg")

[node name="NextButton" type="TextureButton" parent="PuzzleFullscreen/LensArea"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("2_6ml0m")

[node name="TrackLever" type="VBoxContainer" parent="PuzzleFullscreen"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="TrackLengthShort" type="TextureButton" parent="PuzzleFullscreen/TrackLever"]
layout_mode = 2
texture_normal = ExtResource("5_qoa56")
flip_h = true
script = SubResource("GDScript_wvhdc")

[node name="TrackLengthMed" type="TextureButton" parent="PuzzleFullscreen/TrackLever"]
layout_mode = 2
texture_normal = ExtResource("5_qoa56")
flip_h = true
script = SubResource("GDScript_mrysr")

[node name="TrackLengthLong" type="TextureButton" parent="PuzzleFullscreen/TrackLever"]
layout_mode = 2
texture_normal = ExtResource("5_qoa56")
flip_h = true
script = SubResource("GDScript_u0u4a")

[node name="ColorButtons" type="HBoxContainer" parent="PuzzleFullscreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -72.0
offset_right = 44.0
grow_horizontal = 2
grow_vertical = 0

[node name="BlackButton" type="TextureButton" parent="PuzzleFullscreen/ColorButtons"]
layout_mode = 2
texture_normal = ExtResource("4_mfucn")
script = SubResource("GDScript_8fpho")

[node name="WhiteButton" type="TextureButton" parent="PuzzleFullscreen/ColorButtons"]
layout_mode = 2
texture_normal = ExtResource("4_mfucn")
script = SubResource("GDScript_mfucn")

[node name="RedButton" type="TextureButton" parent="PuzzleFullscreen/ColorButtons"]
layout_mode = 2
texture_normal = ExtResource("4_mfucn")
script = SubResource("GDScript_rwxch")

[node name="YellowButton" type="TextureButton" parent="PuzzleFullscreen/ColorButtons"]
layout_mode = 2
texture_normal = ExtResource("4_mfucn")
script = SubResource("GDScript_6ml0m")

[node name="GreenButton" type="TextureButton" parent="PuzzleFullscreen/ColorButtons"]
layout_mode = 2
texture_normal = ExtResource("4_mfucn")
script = SubResource("GDScript_qoa56")

[node name="StartLightButton" type="TextureButton" parent="PuzzleFullscreen"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -63.5
offset_bottom = 63.5
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("7_qoa56")

[connection signal="button_up" from="PuzzleFullscreen/LensArea/PrevButton" to="." method="PrevLens"]
[connection signal="button_up" from="PuzzleFullscreen/LensArea/NextButton" to="." method="NextLens"]
[connection signal="button_down" from="PuzzleFullscreen/TrackLever/TrackLengthShort" to="PuzzleFullscreen/TrackLever/TrackLengthShort" method="_on_button_down"]
[connection signal="button_down" from="PuzzleFullscreen/TrackLever/TrackLengthMed" to="PuzzleFullscreen/TrackLever/TrackLengthMed" method="_on_button_down"]
[connection signal="button_down" from="PuzzleFullscreen/TrackLever/TrackLengthLong" to="PuzzleFullscreen/TrackLever/TrackLengthLong" method="_on_button_down"]
[connection signal="button_down" from="PuzzleFullscreen/ColorButtons/BlackButton" to="PuzzleFullscreen/ColorButtons/BlackButton" method="_on_button_down"]
[connection signal="button_down" from="PuzzleFullscreen/ColorButtons/WhiteButton" to="PuzzleFullscreen/ColorButtons/WhiteButton" method="_on_button_down"]
[connection signal="button_down" from="PuzzleFullscreen/ColorButtons/RedButton" to="PuzzleFullscreen/ColorButtons/RedButton" method="_on_button_down"]
[connection signal="button_down" from="PuzzleFullscreen/ColorButtons/YellowButton" to="PuzzleFullscreen/ColorButtons/YellowButton" method="_on_button_down"]
[connection signal="button_down" from="PuzzleFullscreen/ColorButtons/GreenButton" to="PuzzleFullscreen/ColorButtons/GreenButton" method="_on_button_down"]
[connection signal="button_up" from="PuzzleFullscreen/StartLightButton" to="." method="StartLight"]
